--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
 <div class="main">
-
+	<header>
+		<div class="caption">Food diary</div>
+		<div class="header_text">If you want to feel healthier...</div>
+		<div class="block_buttons">
+			<button id="btn_sign">
+				<a href="sign_up_page.html">Sign Up</a>
+			</button>
+			<button id="btn_login">
+				<a href="log_in_page.html">Log In</a>
+			</button>
+		</div>
+	</header>
 </div>
 </body>
 </html>
