Add block info1, add block info2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 	<div class="fon_image">
 		<img src="img/main_img.jpg">
 	</div>
+	<div class="info1">
+		Eat better - Feel better
+	</div>
+	<div class="info2">
+		Use this diary to record everything you eat and drink and how you feel. It is a powerful tool to make you more aware of your eating habits.
+	</div>
 </div>
 </body>
 </html>
