--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div class="signup_main">
-
+        <header>
+            <div class="caption">Sign Up Page</div>
+            <div class="header_text1">Return to <a href="index.html">Main page</a></div>
+        </header>
+        
     </div>      
 </body>
 </html>
