Add block container

--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -13,7 +13,9 @@
             <div class="caption">Sign Up Page</div>
             <div class="header_text1">Return to <a href="index.html">Main page</a></div>
         </header>
-        
+        <div class="container">
+            
+        </div>
     </div>      
 </body>
 </html>
