--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -14,7 +14,7 @@
             <div class="header_text1">Return to <a href="index.html">Main page</a></div>
         </header>
         <div class="container">
-            
+            <div class="text">Please enter email and password</div>
         </div>
     </div>      
 </body>
