Add block for_sign

--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -30,6 +30,10 @@
                     <button id="btn_clear">Clear</button>
                 </div>
             </form>
+            <div class="for_sign">
+                <p>Return to <a href="index.html">Main page</a></p>
+                <p>Have already account? <a href="log_in_page.html">Log In</a></p>
+            </div>
         </div>
     </div>      
 </body>
