--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -35,6 +35,9 @@
                 <p>Have already account? <a href="log_in_page.html">Log In</a></p>
             </div>
         </div>
+        <div class="img1">
+            <img src="img/img1.png">
+        </div>
     </div>      
 </body>
 </html>
