--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -38,6 +38,7 @@
         <div class="img1">
             <img src="img/img1.png">
         </div>
-    </div>      
+    </div>  
+    <script src="src/script1.js" type="module"></script>    
 </body>
 </html>
