--- a/log_in_page.html
+++ b/log_in_page.html
@@ -9,9 +9,12 @@
 </head>
 <body>
    <div class="login_main">
+    <header>
+        <div class="caption">Log In Page</div>
+        <div class="header_text1">Return to <a href="index.html">Main page</a></div>
+    </header>
 
 
-    
    </div>
 </body>
 </html>
