Add block container

--- a/log_in_page.html
+++ b/log_in_page.html
@@ -13,7 +13,12 @@
         <div class="caption">Log In Page</div>
         <div class="header_text1">Return to <a href="index.html">Main page</a></div>
     </header>
+    <div class="container">
 
+
+
+        
+    </div>
 
    </div>
 </body>
