--- a/log_in_page.html
+++ b/log_in_page.html
@@ -14,10 +14,10 @@
         <div class="header_text1">Return to <a href="index.html">Main page</a></div>
     </header>
     <div class="container">
+        <div class="text">Please enter email and password</div>
 
 
 
-        
     </div>
 
    </div>
