Add block for_login

--- a/log_in_page.html
+++ b/log_in_page.html
@@ -30,6 +30,10 @@
                 <button id="btn_clear">Clear</button>
             </div>
         </form>
+        <div class="for_login">
+            <p>Return to <a href="index.html">Main page</a></p>
+            <p>If you don't have account <a href="sign_up_page.html">Sign Up</a></p>
+        </div>
 
 
     </div>
