--- a/log_in_page.html
+++ b/log_in_page.html
@@ -34,10 +34,10 @@
             <p>Return to <a href="index.html">Main page</a></p>
             <p>If you don't have account <a href="sign_up_page.html">Sign Up</a></p>
         </div>
-
-
     </div>
-
+    <div class="img2">
+        <img src="img/img2.png">
+    </div>
    </div>
 </body>
 </html>
