--- a/log_in_page.html
+++ b/log_in_page.html
@@ -39,5 +39,6 @@
         <img src="img/img2.png">
     </div>
    </div>
+   <script src="src/script2.js" type="module"></script> 
 </body>
 </html>
