--- a/food.html
+++ b/food.html
@@ -8,9 +8,13 @@
 </head>
 <body>
 <div class="food_main">
+    <header>
+        <div class="caption">Food diary</div>
+		<div class="header_text">Hello, food lover...</div>
+	    <button id="btn_sign_out">Sign Out</button>
+    </header>
 
 
-    
 </div>
 </body>
 </html>
