Add block content

--- a/food.html
+++ b/food.html
@@ -14,7 +14,9 @@
 	    <button id="btn_sign_out">Sign Out</button>
     </header>
     <div class="food_text">Choose meals what you have eaten this day</div>
-
+    <div class="content">
+        
+    </div>
 </div>
 </body>
 </html>
