Add block cards

--- a/food.html
+++ b/food.html
@@ -15,7 +15,9 @@
     </header>
     <div class="food_text">Choose meals what you have eaten this day</div>
     <div class="content">
-        
+        <div class="cards">
+
+        </div>
     </div>
 </div>
 </body>
