--- a/food.html
+++ b/food.html
@@ -16,7 +16,17 @@
     <div class="food_text">Choose meals what you have eaten this day</div>
     <div class="content">
         <div class="cards">
+            <div class="row">
+                <div class="caption1">Porridge</div>
+                <div class="meal_card">
+                    <div class="meal_image"> <img src="img/oatmeal_water.jpg"></div>
+                    <div class="meal_caption">Oatmeal with water</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+               
+            </div>
 
+            
         </div>
     </div>
 </div>
