--- a/food.html
+++ b/food.html
@@ -23,10 +23,32 @@
                     <div class="meal_caption">Oatmeal with water</div>
                     <button class="choose_btn">Choose</button>
                 </div>
-               
+                <div class="meal_card">
+                    <div class="meal_image"> <img src="img/oatmeal_milk.jpg"></div>
+                    <div class="meal_caption">Oatmeal with milk</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"> <img src="img/oatmeal_fruits.jpg"></div>
+                    <div class="meal_caption">Oatmeal with fruits</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"> <img src="img/buckwheat_water.jpg"></div>
+                    <div class="meal_caption">Buckwheat porridge with water</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"> <img src="img/semolina_milk.jpg"></div>
+                    <div class="meal_caption">Semolina porridge with  mild</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"> <img src="img/millet_milk.jpg"></div>
+                    <div class="meal_caption">Millet porridge with  milk</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
             </div>
-
-            
         </div>
     </div>
 </div>
