--- a/food.html
+++ b/food.html
@@ -49,6 +49,39 @@
                     <button class="choose_btn">Choose</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Salads</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/tomato_cucumber_salad.jpeg"></div>
+                    <div class="meal_caption">Salad with tomatoes and cucumbers</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/caesar_salad.jpg"></div>
+                    <div class="meal_caption">Caesar salad</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/fruit_salad.jpg"></div>
+                    <div class="meal_caption">Fruit salad</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/cabbidge_salad.jpeg"></div>
+                    <div class="meal_caption">Cabbidge salad</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pasta_salad.jpg"></div>
+                    <div class="meal_caption">Pasta salad</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/broccoli_salad.jpg"></div>
+                    <div class="meal_caption">Broccoli salad</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
