--- a/food.html
+++ b/food.html
@@ -82,6 +82,39 @@
                     <button class="choose_btn">Choose</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Soup</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/broccoli_soup.jpg"></div>
+                    <div class="meal_caption">Broccoli soup</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/cabbidge_soup.png"></div>
+                    <div class="meal_caption">Cabbidge soup</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/chicken_soup.jpg"></div>
+                    <div class="meal_caption">Chicken soup</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/carrot_soup.jpg"></div>
+                    <div class="meal_caption">Carrot soup</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/mushrooms_soup.jpg"></div>
+                    <div class="meal_caption">Mushrooms soup</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pumpkin_soup.jpg"></div>
+                    <div class="meal_caption">Pumpkin soup</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
