--- a/food.html
+++ b/food.html
@@ -115,6 +115,39 @@
                     <button class="choose_btn">Choose</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Fish</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/haddock.jpg"></div>
+                    <div class="meal_caption">Haddock</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/tuna_steak.jpg"></div>
+                    <div class="meal_caption">Tuna steak</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/cedar_salmon.jpeg"></div>
+                    <div class="meal_caption">Cedar Plank Salmon</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/baked_mackerel.jpg"></div>
+                    <div class="meal_caption">Baked mackerel</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/roasted_salmon.jpg"></div>
+                    <div class="meal_caption">Roasted salmon</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/roasted_hake.jpg"></div>
+                    <div class="meal_caption">Roasted hake</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
