--- a/food.html
+++ b/food.html
@@ -148,6 +148,39 @@
                     <button class="choose_btn">Choose</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Meat</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/chicken_chop.jpg"></div>
+                    <div class="meal_caption">Chicken chop</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pork_chop.jpg"></div>
+                    <div class="meal_caption">Pork chop</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/chicken_cutlets.jpg"></div>
+                    <div class="meal_caption">Chicken cutlets</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pork_cutlets.jpg"></div>
+                    <div class="meal_caption">Pork cutlets</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/roast_chicken.jpg"></div>
+                    <div class="meal_caption">Roast chicken</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/roast_turkey.jpg"></div>
+                    <div class="meal_caption">Roast turkey</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
