--- a/food.html
+++ b/food.html
@@ -181,6 +181,39 @@
                     <button class="choose_btn">Choose</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Garhish</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/boil_potatoes.jpg"></div>
+                    <div class="meal_caption">Boil potatoes</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/fried_potatoes.jpg"></div>
+                    <div class="meal_caption">Fried potatoes</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pasta.jpg"></div>
+                    <div class="meal_caption">Pasta</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/rice.jpg"></div>
+                    <div class="meal_caption">Rice</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/rice_vegetables.jpg"></div>
+                    <div class="meal_caption">Rise with vegetables</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/beans.jpg"></div>
+                    <div class="meal_caption">Beans</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
