--- a/food.html
+++ b/food.html
@@ -214,6 +214,39 @@
                     <button class="choose_btn">Choose</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Desserts</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/apple_pie.jpg"></div>
+                    <div class="meal_caption">Apple pie</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/jelly.jpg"></div>
+                    <div class="meal_caption">Jelly</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/cheesecake.jpg"></div>
+                    <div class="meal_caption">Cheesecake</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/chocolate_cake.jpeg"></div>
+                    <div class="meal_caption">Chocolate cake</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/tiramisu.jpg"></div>
+                    <div class="meal_caption">Tiramisu</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pancake.jpg"></div>
+                    <div class="meal_caption">Pancakes</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
