--- a/food.html
+++ b/food.html
@@ -247,6 +247,39 @@
                     <button class="choose_btn">Choose</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Bakery goods</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/white_bread.jpg"></div>
+                    <div class="meal_caption">White bread</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/rye_bread.jpg"></div>
+                    <div class="meal_caption">Rye bread</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/buns.jpg"></div>
+                    <div class="meal_caption">Bun</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/donut.jpg"></div>
+                    <div class="meal_caption">Donut</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/frenchbread.jpg"></div>
+                    <div class="meal_caption">Frenchbread</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/cruasan.jpg"></div>
+                    <div class="meal_caption">Croissant</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
