Change block food_text

--- a/food.html
+++ b/food.html
@@ -13,7 +13,7 @@
 		<div class="header_text">Hello, food lover...</div>
 	    <button id="btn_sign_out">Sign Out</button>
     </header>
-    <div class="food_text">Choose meals what you have eaten today</div>
+    <div class="food_text">Choose meals you have eaten today</div>
     <div class="content">
         <div class="cards">
             <div class="row">
