--- a/food.html
+++ b/food.html
@@ -280,6 +280,39 @@
                     <button class="choose_btn">Choose</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Snacks</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/chips.jpg"></div>
+                    <div class="meal_caption">Chips</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/croutons.jpg"></div>
+                    <div class="meal_caption">Croutons</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/dried-fruits.jpg"></div>
+                    <div class="meal_caption">Dried fruits</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/squid.jpg"></div>
+                    <div class="meal_caption">Squid</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/sunflower-seeds.jpg"></div>
+                    <div class="meal_caption">Sunflower seeds</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pumpkin_seeds.jpg"></div>
+                    <div class="meal_caption">Pumpkin seeds</div>
+                    <button class="choose_btn">Choose</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
