--- a/food_diary.html
+++ b/food_diary.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 <div class="diary_main">
-	
+	<header>
+        <div class="caption">Food diary</div>
+		<div class="header_text">Hello, food lover...</div>
+	    <button id="btn_sign_out">Sign Out</button>
+    </header>
 </div>
 </body>
 </html>
