--- a/food.html
+++ b/food.html
@@ -11,7 +11,8 @@
     <header>
         <div class="caption">Food diary</div>
 		<div class="header_text">Hello, food lover...</div>
-	    <button id="btn_sign_out">Sign Out</button>
+	    <button id="goto_diary">Go to diary</button>
+        <button id="btn_sign_out">Sign Out</button>
     </header>
     <div class="food_text">Choose meals you have eaten today</div>
     <div class="content">
