--- a/food.html
+++ b/food.html
@@ -23,31 +23,37 @@
                     <div class="meal_image"> <img src="img/oatmeal_water.jpg"></div>
                     <div class="meal_caption">Oatmeal with water</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">150</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"> <img src="img/oatmeal_milk.jpg"></div>
                     <div class="meal_caption">Oatmeal with milk</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">220</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"> <img src="img/oatmeal_fruits.jpg"></div>
                     <div class="meal_caption">Oatmeal with fruits</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">300</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"> <img src="img/buckwheat_water.jpg"></div>
                     <div class="meal_caption">Buckwheat porridge with water</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">160</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"> <img src="img/semolina_milk.jpg"></div>
-                    <div class="meal_caption">Semolina porridge with  mild</div>
+                    <div class="meal_caption">Semolina porridge with  milk</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">150</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"> <img src="img/millet_milk.jpg"></div>
                     <div class="meal_caption">Millet porridge with  milk</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">115</div>
                 </div>
             </div>
             <div class="row">
@@ -56,31 +62,37 @@
                     <div class="meal_image"><img src="img/tomato_cucumber_salad.jpeg"></div>
                     <div class="meal_caption">Salad with tomatoes and cucumbers</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">57</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/caesar_salad.jpg"></div>
                     <div class="meal_caption">Caesar salad</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">44</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/fruit_salad.jpg"></div>
                     <div class="meal_caption">Fruit salad</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">50</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/cabbidge_salad.jpeg"></div>
                     <div class="meal_caption">Cabbidge salad</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">73</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/pasta_salad.jpg"></div>
                     <div class="meal_caption">Pasta salad</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">200</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/broccoli_salad.jpg"></div>
                     <div class="meal_caption">Broccoli salad</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">105</div>
                 </div>
             </div>
             <div class="row">
@@ -89,31 +101,37 @@
                     <div class="meal_image"><img src="img/broccoli_soup.jpg"></div>
                     <div class="meal_caption">Broccoli soup</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">104</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/cabbidge_soup.png"></div>
                     <div class="meal_caption">Cabbidge soup</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">134</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/chicken_soup.jpg"></div>
                     <div class="meal_caption">Chicken soup</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">65</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/carrot_soup.jpg"></div>
                     <div class="meal_caption">Carrot soup</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">71</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/mushrooms_soup.jpg"></div>
                     <div class="meal_caption">Mushrooms soup</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">42</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/pumpkin_soup.jpg"></div>
                     <div class="meal_caption">Pumpkin soup</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">34</div>
                 </div>
             </div>
             <div class="row">
@@ -122,31 +140,37 @@
                     <div class="meal_image"><img src="img/haddock.jpg"></div>
                     <div class="meal_caption">Haddock</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">90</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/tuna_steak.jpg"></div>
                     <div class="meal_caption">Tuna steak</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">130</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/cedar_salmon.jpeg"></div>
                     <div class="meal_caption">Cedar Plank Salmon</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">208</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/baked_mackerel.jpg"></div>
                     <div class="meal_caption">Baked mackerel</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">250</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/roasted_salmon.jpg"></div>
                     <div class="meal_caption">Roasted salmon</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">171</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/roasted_hake.jpg"></div>
                     <div class="meal_caption">Roasted hake</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">72</div>
                 </div>
             </div>
             <div class="row">
@@ -155,31 +179,37 @@
                     <div class="meal_image"><img src="img/chicken_chop.jpg"></div>
                     <div class="meal_caption">Chicken chop</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">240</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/pork_chop.jpg"></div>
                     <div class="meal_caption">Pork chop</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">230</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/chicken_cutlets.jpg"></div>
                     <div class="meal_caption">Chicken cutlets</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">175</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/pork_cutlets.jpg"></div>
                     <div class="meal_caption">Pork cutlets</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">248</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/roast_chicken.jpg"></div>
                     <div class="meal_caption">Roast chicken</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">260</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/roast_turkey.jpg"></div>
                     <div class="meal_caption">Roast turkey</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">188</div>
                 </div>
             </div>
             <div class="row">
@@ -188,31 +218,37 @@
                     <div class="meal_image"><img src="img/boil_potatoes.jpg"></div>
                     <div class="meal_caption">Boil potatoes</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">87</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/fried_potatoes.jpg"></div>
                     <div class="meal_caption">Fried potatoes</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">311</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/pasta.jpg"></div>
                     <div class="meal_caption">Pasta</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">131</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/rice.jpg"></div>
                     <div class="meal_caption">Rice</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">130</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/rice_vegetables.jpg"></div>
                     <div class="meal_caption">Rise with vegetables</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">99</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/beans.jpg"></div>
                     <div class="meal_caption">Beans</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">244</div>
                 </div>
             </div>
             <div class="row">
@@ -221,31 +257,37 @@
                     <div class="meal_image"><img src="img/apple_pie.jpg"></div>
                     <div class="meal_caption">Apple pie</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">237</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/jelly.jpg"></div>
                     <div class="meal_caption">Jelly</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">62</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/cheesecake.jpg"></div>
                     <div class="meal_caption">Cheesecake</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">321</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/chocolate_cake.jpeg"></div>
                     <div class="meal_caption">Chocolate cake</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">370</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/tiramisu.jpg"></div>
                     <div class="meal_caption">Tiramisu</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">600</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/pancake.jpg"></div>
                     <div class="meal_caption">Pancakes</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">227</div>
                 </div>
             </div>
             <div class="row">
@@ -254,31 +296,37 @@
                     <div class="meal_image"><img src="img/white_bread.jpg"></div>
                     <div class="meal_caption">White bread</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">246</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/rye_bread.jpg"></div>
                     <div class="meal_caption">Rye bread</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">259</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/buns.jpg"></div>
                     <div class="meal_caption">Bun</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">310</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/donut.jpg"></div>
                     <div class="meal_caption">Donut</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">253</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/frenchbread.jpg"></div>
                     <div class="meal_caption">Frenchbread</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">290</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/cruasan.jpg"></div>
                     <div class="meal_caption">Croissant</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">406</div>
                 </div>
             </div>
             <div class="row">
@@ -287,31 +335,37 @@
                     <div class="meal_image"><img src="img/chips.jpg"></div>
                     <div class="meal_caption">Chips</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">536</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/croutons.jpg"></div>
                     <div class="meal_caption">Croutons</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">406</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/dried-fruits.jpg"></div>
                     <div class="meal_caption">Dried fruits</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">480</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/squid.jpg"></div>
                     <div class="meal_caption">Squid</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">174</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/sunflower-seeds.jpg"></div>
                     <div class="meal_caption">Sunflower seeds</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">584</div>
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/pumpkin_seeds.jpg"></div>
                     <div class="meal_caption">Pumpkin seeds</div>
                     <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">446</div>
                 </div>
             </div>
         </div>
