--- a/food.html
+++ b/food.html
@@ -368,6 +368,45 @@
                     <div class="meal_calories">446</div>
                 </div>
             </div>
+            <div class="row">
+                <div class="caption1">Drinks</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/americano.jpg"></div>
+                    <div class="meal_caption">Americano</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">18</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/milk_americano.jpg"></div>
+                    <div class="meal_caption">Americano with milk</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">38</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/latte.jpg"></div>
+                    <div class="meal_caption">Latte</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">133</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/cappuccino.jpg"></div>
+                    <div class="meal_caption">Cappucino</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">150</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/green_tea.jpg"></div>
+                    <div class="meal_caption">Green tea</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">25</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/black_tea.jpg"></div>
+                    <div class="meal_caption">Black tea</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">25</div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
