--- a/food.html
+++ b/food.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/style.css">
+    <script src="src/script3.js" type="module"></script>
+    <script src="src/script4.js" type="module"></script>
 </head>
 <body>
 <div class="food_main">
