Add block content1

--- a/food_diary.html
+++ b/food_diary.html
@@ -13,6 +13,19 @@
 		<div class="header_text">Hello, food lover...</div>
 	    <button id="btn_sign_out">Sign Out</button>
     </header>
+	<div class="content1">
+		<div class="block_food">
+			<div class="caption2">My food diary</div>
+			<div class="rectangle">
+				<div class="food_caption">Meal</div>
+				<div class="food_calories">Calories</div>
+				<div class="line"></div>
+			</div>
+			<div class="list_food">
+		
+			</div>
+		</div>
+	</div>
 </div>
 </body>
 </html>
