Add button, add block food_date, add scripts

--- a/food_diary.html
+++ b/food_diary.html
@@ -16,9 +16,11 @@
 	<div class="content1">
 		<div class="block_food">
 			<div class="caption2">My food diary</div>
+			<button id="show_meals">Show</button>
 			<div class="rectangle">
 				<div class="food_caption">Meal</div>
 				<div class="food_calories">Calories</div>
+				<div class="food_date">Date</div>
 				<div class="line"></div>
 			</div>
 			<div class="list_food">
@@ -27,5 +29,7 @@
 		</div>
 	</div>
 </div>
+<script src="src/script4.js" type="module"></script>
+<script src="src/script5.js" type="module"></script>
 </body>
 </html>
