--- a/food_diary.html
+++ b/food_diary.html
@@ -27,6 +27,14 @@
 		
 			</div>
 		</div>
+		<div class="block_calories">
+			<div class="caption3">Calories</div>
+			<div class="result">
+				<div class="result_calories">Calories</div>
+				<div class="result_date">Date</div>
+				<div class="line"></div>
+			</div>
+		</div>
 	</div>
 </div>
 <script src="src/script4.js" type="module"></script>
