--- a/food_diary.html
+++ b/food_diary.html
@@ -35,6 +35,9 @@
 				<div class="line"></div>
 			</div>
 		</div>
+		<div class="img3">
+			<img src="img/img3.png">
+		</div>
 	</div>
 </div>
 <script src="src/script4.js" type="module"></script>
