Add hyperlink to button goto_diary

--- a/food.html
+++ b/food.html
@@ -13,7 +13,7 @@
     <header>
         <div class="caption">Food diary</div>
 		<div class="header_text">Hello, food lover...</div>
-	    <button id="goto_diary">Go to diary</button>
+	    <button id="goto_diary"><a href="food_diary.html">Go to diary</a></button>
         <button id="btn_sign_out">Sign Out</button>
     </header>
     <div class="food_text">Choose meals you have eaten today</div>
