--- a/food_diary.html
+++ b/food_diary.html
@@ -12,6 +12,7 @@
 	<header>
         <div class="caption">Food diary</div>
 		<div class="header_text">Hello, food lover...</div>
+		<button id="goto_food"><a href="food.html">Go to food</a></button>
 	    <button id="btn_sign_out">Sign Out</button>
     </header>
 	<div class="content1">
