Change block food_date and block result_date

--- a/food_diary.html
+++ b/food_diary.html
@@ -22,7 +22,7 @@
 			<div class="rectangle">
 				<div class="food_caption">Meal</div>
 				<div class="food_calories">Calories</div>
-				<div class="food_date">Date</div>
+				<div class="food_date">Day</div>
 				<div class="line"></div>
 			</div>
 			<div class="list_food">
@@ -33,7 +33,7 @@
 			<div class="caption3">Calories</div>
 			<div class="result">
 				<div class="result_calories">Calories</div>
-				<div class="result_date">Date</div>
+				<div class="result_date">Day</div>
 				<div class="line"></div>
 			</div>
 		</div>
