--- a/food.html
+++ b/food.html
@@ -62,7 +62,7 @@
                 <div class="caption1">Salads</div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/tomato_cucumber_salad.jpeg"></div>
-                    <div class="meal_caption">Salad with tomatoes and cucumbers</div>
+                    <div class="meal_caption">Tomatoes and cucumbers salad</div>
                     <button class="choose_btn">Choose</button>
                     <div class="meal_calories">57</div>
                 </div>
