--- a/food_diary.html
+++ b/food_diary.html
@@ -32,6 +32,7 @@
 		</div>
 		<div class="block_calories">
 			<div class="caption3">Calories</div>
+			<button id="show_calories">Show</button>
 			<div class="result">
 				<div class="result_calories">Calories</div>
 				<div class="result_date">Day</div>
