Add block list_calories

--- a/food_diary.html
+++ b/food_diary.html
@@ -37,6 +37,9 @@
 				<div class="result_calories">Calories</div>
 				<div class="result_date">Day</div>
 				<div class="line"></div>
+				<div class="list_calories">
+		
+				</div>
 			</div>
 		</div>
 		<div class="img3">
