Add blocks block_result to block list_calories

--- a/food_diary.html
+++ b/food_diary.html
@@ -38,7 +38,34 @@
 				<div class="result_date">Day</div>
 				<div class="line"></div>
 				<div class="list_calories">
-		
+					<div class="block_result">
+						<div class="block_result_calories">0</div>
+						<div class="block_result_date">Monday</div>
+					</div>
+					<div class="block_result">
+						<div class="block_result_calories">0</div>
+						<div class="block_result_date">Tuesday</div>
+					</div>
+					<div class="block_result">
+						<div class="block_result_calories">0</div>
+						<div class="block_result_date">Wednesday</div>
+					</div>
+					<div class="block_result">
+						<div class="block_result_calories">0</div>
+						<div class="block_result_date">Thursday</div>
+					</div>
+					<div class="block_result">
+						<div class="block_result_calories">0</div>
+						<div class="block_result_date">Friday</div>
+					</div>
+					<div class="block_result">
+						<div class="block_result_calories">0</div>
+						<div class="block_result_date">Saturday</div>
+					</div>
+					<div class="block_result">
+						<div class="block_result_calories">0</div>
+						<div class="block_result_date">Sunday</div>
+					</div>
 				</div>
 			</div>
 		</div>
