--- a/food.html
+++ b/food.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="meal_card">
                     <div class="meal_image"> <img src="img/buckwheat_water.jpg"></div>
-                    <div class="meal_caption">Buckwheat porridge with water</div>
+                    <div class="meal_caption">Buckwheat with water</div>
                     <button class="choose_btn">Choose</button>
                     <div class="meal_calories">220</div>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="caption1">Salads</div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/tomato_cucumber_salad.jpeg"></div>
-                    <div class="meal_caption">Tomatoes and cucumbers salad</div>
+                    <div class="meal_caption">Tomatoes&cucumbers salad</div>
                     <button class="choose_btn">Choose</button>
                     <div class="meal_calories">120</div>
                 </div>
