Add button start_week, add script6

--- a/food_diary.html
+++ b/food_diary.html
@@ -67,6 +67,7 @@
 						<div class="block_result_date">Sunday</div>
 					</div>
 				</div>
+				<button id="start_week">Start new week</button>
 			</div>
 		</div>
 		<div class="img3">
@@ -76,5 +77,6 @@
 </div>
 <script src="src/script4.js" type="module"></script>
 <script src="src/script5.js" type="module"></script>
+<script src="src/script6.js" type="module"></script>
 </body>
 </html>
