Add block row for fruits

--- a/food.html
+++ b/food.html
@@ -371,6 +371,45 @@
                 </div>
             </div>
             <div class="row">
+                <div class="caption1">Fruits</div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/apple.jpg"></div>
+                    <div class="meal_caption">Apple</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">75</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pear.jpg"></div>
+                    <div class="meal_caption">Pear</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">90</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/orange.jpg"></div>
+                    <div class="meal_caption">Orange</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">100</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/melon.jpg"></div>
+                    <div class="meal_caption">Melon</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">150</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/banana.jpg"></div>
+                    <div class="meal_caption">Banana</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">190</div>
+                </div>
+                <div class="meal_card">
+                    <div class="meal_image"><img src="img/pomegranate.jpg"></div>
+                    <div class="meal_caption">Pomegranate</div>
+                    <button class="choose_btn">Choose</button>
+                    <div class="meal_calories">88</div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="caption1">Drinks</div>
                 <div class="meal_card">
                     <div class="meal_image"><img src="img/americano.jpg"></div>
